# voice-transcribe

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  documentation.yml  feature.yml
.github/workflows/: auto-assign.yml
example/live_call/: live_call.html  live_call.js
src/whisper_transcribe/: main.py
voice_transcribe/: main.py  routers.py
voice_transcribe/configs/: dev.yaml  prod.yaml  stage.yaml
voice_transcribe/controllers/: base_controller.py  transcribe_controller.py  ws_controller.py
voice_transcribe/dtos/models/: __init__.py  model_dto.py  model_names.py  model_sizes.py
voice_transcribe/dtos/settings/: __init__.py  model_settings_dto.py  server_settings_dto.py  settings_dto.py
voice_transcribe/dtos/transcriber/: __init__.py  transcribed_dto.py  transcriber_dto.py
voice_transcribe/dtos/ws/: __init__.py  ws_request_dto.py  ws_request_types.py  ws_response_dto.py
voice_transcribe/services/core/: base_service.py  bootstrapper_service.py  settings_service.py
voice_transcribe/services/model/: model_service.py
voice_transcribe/services/transcriber/: __init__.py  transcriber_service.py
voice_transcribe/services/ws/: connection_manager_service.py  ws_service.py
voice_transcribe/shared/utils/: funcs.py  logger.py
whisper_transcribe/: main.py  routers.py
whisper_transcribe/configs/: stage.yaml
whisper_transcribe/controllers/: __init__.py  base_controller.py  transcribe_controller.py  ws_controller.py
whisper_transcribe/dtos/settings/: settings_dto.py
whisper_transcribe/dtos/transcriber/: transcribed_dto.py  transcriber_dto.py
whisper_transcribe/dtos/ws/: ws_response_dto.py
whisper_transcribe/services/core/: __init__.py  base_service.py  bootstrapper_service.py  settings_service.py
whisper_transcribe/services/transcriber/: transcriber_service.py
whisper_transcribe/services/ws/: __init__.py  ws_service.py
whisper_transcribe/shared/utils/: __init__.py
